fix color and cange color-shade to green for visible

--- a/src/components/nav/nav.less
+++ b/src/components/nav/nav.less
@@ -12,13 +12,13 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--color-shade , #DFE4EF);//#DFE4EF;
+    border: 2px solid var(--color-shade , #DFE4EF);
     border-radius: 1000000px;
     width: 28px;
     height: 28px;
     box-sizing: border-box;
     &-dane{
-      border-color: var(--color-shade , #DFE4EF);
+      border-color: var(--color-select , #0066FF);
     }
     &-in_progress{
       border-color: var(--color-warning , #FF238D);
